syntax = "proto3";

package mathison;

service MathisonService {
  // Run a job (unary)
  rpc RunJob(JobRunRequest) returns (JobResult);

  // Get job status (unary)
  rpc GetJobStatus(JobStatusRequest) returns (JobStatus);

  // Stream job status updates (server streaming)
  rpc StreamJobStatus(JobStatusRequest) returns (stream JobStatus);

  // OI interpretation (unary)
  rpc InterpretText(InterpretRequest) returns (InterpretResult);

  // Create memory node (unary)
  rpc CreateMemoryNode(CreateNodeRequest) returns (CreateNodeResult);

  // Read memory node (unary)
  rpc ReadMemoryNode(ReadNodeRequest) returns (Node);

  // Search memory (unary or streaming)
  rpc SearchMemory(SearchRequest) returns (stream SearchResult);

  // Knowledge ingestion via CPACK (unary)
  rpc IngestKnowledge(IngestKnowledgeRequest) returns (IngestKnowledgeResult);
}

message JobRunRequest {
  string job_type = 1;
  bytes inputs = 2;
  string policy_id = 3;
  string job_id = 4;
}

message JobResult {
  string job_id = 1;
  string status = 2;
  bytes outputs = 3;
  string receipt_id = 4;
}

message JobStatusRequest {
  string job_id = 1;
}

message JobStatus {
  string job_id = 1;
  string status = 2;
  string current_stage = 3;
  int64 start_time = 4;
  int64 end_time = 5;
}

message InterpretRequest {
  string text = 1;
  int32 limit = 2;
}

message InterpretResult {
  repeated string tokens = 1;
  repeated InterpretMatch matches = 2;
}

message InterpretMatch {
  string node_id = 1;
  string type = 2;
  double score = 3;
}

message CreateNodeRequest {
  string idempotency_key = 1;
  string id = 2;
  string type = 3;
  bytes data = 4;
  bytes metadata = 5;
}

message CreateNodeResult {
  Node node = 1;
  bool created = 2;
  string receipt_id = 3;
}

message ReadNodeRequest {
  string id = 1;
}

message Node {
  string id = 1;
  string type = 2;
  bytes data = 3;
  bytes metadata = 4;
}

message SearchRequest {
  string query = 1;
  int32 limit = 2;
}

message SearchResult {
  string node_id = 1;
  string type = 2;
  bytes data = 3;
  double score = 4;
}

// Knowledge ingestion messages
message IngestKnowledgeRequest {
  string cpack_yaml = 1;           // CPACK as YAML string (alternative to cpack_json)
  string cpack_json = 2;           // CPACK as JSON string
  bytes llm_output = 3;            // LLMOutput as JSON bytes
  string mode = 4;                 // GROUND_ONLY or GROUND_PLUS_HYPOTHESIS
  bytes context = 5;               // Optional context as JSON bytes
}

message IngestKnowledgeResult {
  bool success = 1;
  string reason_code = 2;
  string message = 3;
  int32 grounded_count = 4;
  int32 hypothesis_count = 5;
  int32 denied_count = 6;
  int32 conflict_count = 7;
  repeated string grounded_claim_ids = 8;
  repeated string hypothesis_claim_ids = 9;
  repeated DeniedReason denied_reasons = 10;
  repeated string conflict_ids = 11;
  string packet_id = 12;
  string ingestion_run_id = 13;
  string sources_hash = 14;
  int64 timestamp = 15;
}

message DeniedReason {
  int32 claim_index = 1;
  string reason = 2;
}
